np/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mysql-from-quarkus
  namespace: db-project
spec:
  podSelector:
    matchLabels:
      app: loyaltymysql
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: app-project
          podSelector:
            matchLabels:
              deployment: quarkus-loyalty-java
      ports:
        - protocol: TCP
          port: 3306
  policyTypes:
    - Ingress
